--- a/DimseLab-Aflevering/MainPage.xaml
+++ b/DimseLab-Aflevering/MainPage.xaml
@@ -143,14 +143,99 @@
         <!--#region MyProjectsGrid-->
         <Grid Grid.Row="1"
               Visibility="{Binding MyProjectsVisibility}">
-            <Grid Grid.Row="1">
+            <Grid>
                 <Grid.DataContext>
-                    <viewModel:BrowseViewModel />
+                    <viewModel:MyProjectsViewModel />
                 </Grid.DataContext>
-                <TextBox BorderThickness="5"
-                         BorderBrush="Blue">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="1*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <TextBlock Grid.Row="0"
+                           Grid.Column="0"
+                           Text="Mine Projekter"
+                           Margin="10"/>
 
-                </TextBox>
+                <ListView ItemsSource="{Binding MyProjects, Mode=TwoWay}"
+                          Height="500"
+                          Width="500"
+                          HorizontalAlignment="Left"
+                          SelectedItem="{Binding SelectedProject}"
+                          Grid.Row="1"
+                          Grid.Column="0">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel>
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition />
+                                        <RowDefinition />
+                                        <RowDefinition />
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="300" />
+                                        <ColumnDefinition Width="200" />
+                                    </Grid.ColumnDefinitions>
+                                    <TextBlock Text="{Binding Name}"
+                                               Margin="10,10,10,5"
+                                               Grid.Row="0"
+                                               Grid.Column="0" />
+                                    <TextBlock Text="{Binding Description}"
+                                               Margin="10,5,10,5"
+                                               Grid.Row="1"
+                                               Grid.Column="0" />
+                                    <MenuFlyoutSeparator Grid.Row="2"
+                                                         Grid.Column="0"
+                                                         Grid.ColumnSpan="2" />
+                                </Grid>
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+                <Grid HorizontalAlignment="Left"
+                      VerticalAlignment="Bottom"
+                      MinWidth="200">
+                    <Grid.RowDefinitions>
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition MinWidth="200" />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Text="Tilføj deltager:"
+                               Grid.Row="0"
+                               Grid.Column="0"
+                               Margin="5"
+                               FontWeight="Bold" />
+                    <TextBlock Text="Navn:"
+                               Grid.Row="1"
+                               Grid.Column="0"
+                               Margin="5" />
+                    <TextBlock Text="E-mail:"
+                               Grid.Row="2"
+                               Grid.Column="0"
+                               Margin="5" />
+                    <TextBox Grid.Row="1"
+                             Grid.Column="1"
+                             Margin="5"
+                             Text="{Binding SelectedDeltager.DeltagerNavn}" />
+                    <TextBox Grid.Row="2"
+                             Grid.Column="2"
+                             Margin="5"
+                             Text="{Binding SelectedDeltager.DeltagerEmail}" />
+                    <Button Content="Tilføj"
+                            Grid.Row="3"
+                            Grid.Column="2"
+                            Margin="5"
+                            Command="{Binding RelayCmdUser}" />
+                </Grid>
             </Grid>
         </Grid>
         <!--#endregion-->
