--- a/DimseLab-Aflevering/MainPage.xaml
+++ b/DimseLab-Aflevering/MainPage.xaml
@@ -132,10 +132,136 @@
                 <Grid.DataContext>
                     <viewModel:BrowseViewModel />
                 </Grid.DataContext>
-                <TextBox BorderThickness="5"
-                         BorderBrush="Black">
-
-                </TextBox>
+                <Pivot x:Name="rootPivot"
+                       Title="Browse">
+                    <PivotItem Header="Projekter">
+                        <StackPanel>
+                            <ListView ItemsSource="{Binding ProjectList, Mode=TwoWay}"
+                                      Height="500">
+                                <ListView.ItemTemplate>
+                                    <DataTemplate>
+                                        <StackPanel>
+                                            <Grid>
+                                                <Grid.RowDefinitions>
+                                                    <RowDefinition />
+                                                    <RowDefinition />
+                                                    <RowDefinition />
+                                                </Grid.RowDefinitions>
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="300" />
+                                                    <ColumnDefinition Width="200" />
+                                                </Grid.ColumnDefinitions>
+                                                <TextBlock Text="{Binding Name}"
+                                                           FontWeight="Bold"
+                                                           Margin="10,10,10,5"
+                                                           Grid.Row="0"
+                                                           Grid.Column="0" />
+                                                <TextBlock Text="{Binding Description}"
+                                                           Margin="10,5,10,5"
+                                                           Grid.Row="1"
+                                                           Grid.Column="0" />
+                                                <MenuFlyoutSeparator Grid.Row="2"
+                                                                     Grid.Column="0"
+                                                                     Grid.ColumnSpan="2" />
+                                            </Grid>
+                                        </StackPanel>
+                                    </DataTemplate>
+                                </ListView.ItemTemplate>
+                            </ListView>
+                        </StackPanel>
+                    </PivotItem>
+                    <PivotItem Header="Deltagere">
+                        <StackPanel>
+                            <ListView ItemsSource="{Binding MasterUserList, Mode=TwoWay}"
+                                      Height="500"
+                                      Width="500"
+                                      HorizontalAlignment="Left"
+                                      SelectedItem="{Binding SelectedDeltager}">
+                                <ListView.ItemTemplate>
+                                    <DataTemplate>
+                                        <StackPanel>
+                                            <Grid>
+                                                <Grid.RowDefinitions>
+                                                    <RowDefinition />
+                                                    <RowDefinition />
+                                                    <RowDefinition />
+                                                </Grid.RowDefinitions>
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="300" />
+                                                    <ColumnDefinition Width="200" />
+                                                </Grid.ColumnDefinitions>
+                                                <TextBlock Text="{Binding DeltagerNavn}"
+                                                           Margin="10,10,10,5"
+                                                           Grid.Row="0"
+                                                           Grid.Column="0" />
+                                                <TextBlock Text="{Binding DeltagerEmail}"
+                                                           Margin="10,5,10,5"
+                                                           Grid.Row="1"
+                                                           Grid.Column="0" />
+                                                <MenuFlyoutSeparator Grid.Row="2"
+                                                                     Grid.Column="0"
+                                                                     Grid.ColumnSpan="2" />
+                                                <Button Content="+"
+                                                        Command="{Binding AddUserToProject}"
+                                                        CommandParameter="{Binding DeltagerNavn}"
+                                                        Margin="10,0,50,0"
+                                                        HorizontalAlignment="Right"
+                                                        VerticalAlignment="Center"
+                                                        Grid.Row="0"
+                                                        Grid.Column="1"
+                                                        Grid.RowSpan="2" />
+                                            </Grid>
+                                        </StackPanel>
+                                    </DataTemplate>
+                                </ListView.ItemTemplate>
+                            </ListView>
+                            <Grid HorizontalAlignment="Left"
+                                  VerticalAlignment="Bottom"
+                                  MinWidth="200">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition />
+                                    <RowDefinition />
+                                    <RowDefinition />
+                                    <RowDefinition />
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition />
+                                    <ColumnDefinition MinWidth="200" />
+                                </Grid.ColumnDefinitions>
+                                <TextBlock Text="Tilføj deltager:"
+                                           Grid.Row="0"
+                                           Grid.Column="0"
+                                           Margin="5"
+                                           FontWeight="Bold" />
+                                <TextBlock Text="Navn:"
+                                           Grid.Row="1"
+                                           Grid.Column="0"
+                                           Margin="5" />
+                                <TextBlock Text="E-mail:"
+                                           Grid.Row="2"
+                                           Grid.Column="0"
+                                           Margin="5" />
+                                <TextBox Grid.Row="1"
+                                         Grid.Column="1"
+                                         Margin="5"
+                                         Text="{Binding SelectedDeltager.DeltagerNavn}" />
+                                <TextBox Grid.Row="2"
+                                         Grid.Column="2"
+                                         Margin="5"
+                                         Text="{Binding SelectedDeltager.DeltagerEmail}" />
+                                <Button Content="Tilføj"
+                                        Grid.Row="3"
+                                        Grid.Column="2"
+                                        Margin="5"
+                                        Command="{Binding RelayCmdUser}" />
+                            </Grid>
+                        </StackPanel>
+                    </PivotItem>
+                    <PivotItem Header="Dimser">
+                        <!--Pivot content goes here-->
+                        <TextBlock Text="Content of section 3." />
+                    </PivotItem>
+                </Pivot>
             </Grid>
         </Grid>
         <!--#endregion-->
@@ -148,17 +274,17 @@
                     <viewModel:MyProjectsViewModel />
                 </Grid.DataContext>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="2*"/>
-                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="2*" />
+                    <ColumnDefinition Width="1*" />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
-                    <RowDefinition/>
-                    <RowDefinition/>
+                    <RowDefinition />
+                    <RowDefinition />
                 </Grid.RowDefinitions>
                 <TextBlock Grid.Row="0"
                            Grid.Column="0"
                            Text="Mine Projekter"
-                           Margin="10"/>
+                           Margin="10" />
 
                 <ListView ItemsSource="{Binding MyProjects, Mode=TwoWay}"
                           Height="500"
