--- a/DimseLab-Aflevering/MainPage.xaml
+++ b/DimseLab-Aflevering/MainPage.xaml
@@ -159,7 +159,8 @@
                                                 <TextBlock Text="{Binding Description}"
                                                            Margin="10,5,10,5"
                                                            Grid.Row="1"
-                                                           Grid.Column="0" />
+                                                           Grid.Column="0"
+                                                           TextWrapping="Wrap"/>
                                                 <MenuFlyoutSeparator Grid.Row="2"
                                                                      Grid.Column="0"
                                                                      Grid.ColumnSpan="2" />
@@ -172,11 +173,10 @@
                     </PivotItem>
                     <PivotItem Header="Deltagere">
                         <StackPanel>
-                            <ListView ItemsSource="{Binding MasterUserList, Mode=TwoWay}"
+                            <ListView ItemsSource="{Binding UserList, Mode=TwoWay}"
                                       Height="500"
                                       Width="500"
-                                      HorizontalAlignment="Left"
-                                      SelectedItem="{Binding SelectedDeltager}">
+                                      HorizontalAlignment="Left">
                                 <ListView.ItemTemplate>
                                     <DataTemplate>
                                         <StackPanel>
@@ -186,80 +186,54 @@
                                                     <RowDefinition />
                                                     <RowDefinition />
                                                 </Grid.RowDefinitions>
-                                                <Grid.ColumnDefinitions>
-                                                    <ColumnDefinition Width="300" />
-                                                    <ColumnDefinition Width="200" />
-                                                </Grid.ColumnDefinitions>
-                                                <TextBlock Text="{Binding DeltagerNavn}"
-                                                           Margin="10,10,10,5"
-                                                           Grid.Row="0"
-                                                           Grid.Column="0" />
-                                                <TextBlock Text="{Binding DeltagerEmail}"
+                                                <StackPanel Orientation="Horizontal">
+                                                <TextBlock Text="{Binding FirstName}"
+                                                           Margin="10,10,2,5"/>
+                                                <TextBlock Text="{Binding LastName}"
+                                                           Margin="0,10,10,5" />
+                                                </StackPanel>
+                                                <TextBlock Text="{Binding Email}"
                                                            Margin="10,5,10,5"
-                                                           Grid.Row="1"
-                                                           Grid.Column="0" />
-                                                <MenuFlyoutSeparator Grid.Row="2"
-                                                                     Grid.Column="0"
-                                                                     Grid.ColumnSpan="2" />
-                                                <Button Content="+"
-                                                        Command="{Binding AddUserToProject}"
-                                                        CommandParameter="{Binding DeltagerNavn}"
-                                                        Margin="10,0,50,0"
-                                                        HorizontalAlignment="Right"
-                                                        VerticalAlignment="Center"
-                                                        Grid.Row="0"
-                                                        Grid.Column="1"
-                                                        Grid.RowSpan="2" />
+                                                           Grid.Row="1"/>
+                                                <MenuFlyoutSeparator Grid.Row="2"/>
                                             </Grid>
                                         </StackPanel>
                                     </DataTemplate>
                                 </ListView.ItemTemplate>
                             </ListView>
-                            <Grid HorizontalAlignment="Left"
-                                  VerticalAlignment="Bottom"
-                                  MinWidth="200">
-                                <Grid.RowDefinitions>
-                                    <RowDefinition />
-                                    <RowDefinition />
-                                    <RowDefinition />
-                                    <RowDefinition />
-                                </Grid.RowDefinitions>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition />
-                                    <ColumnDefinition MinWidth="200" />
-                                </Grid.ColumnDefinitions>
-                                <TextBlock Text="Tilføj deltager:"
-                                           Grid.Row="0"
-                                           Grid.Column="0"
-                                           Margin="5"
-                                           FontWeight="Bold" />
-                                <TextBlock Text="Navn:"
-                                           Grid.Row="1"
-                                           Grid.Column="0"
-                                           Margin="5" />
-                                <TextBlock Text="E-mail:"
-                                           Grid.Row="2"
-                                           Grid.Column="0"
-                                           Margin="5" />
-                                <TextBox Grid.Row="1"
-                                         Grid.Column="1"
-                                         Margin="5"
-                                         Text="{Binding SelectedDeltager.DeltagerNavn}" />
-                                <TextBox Grid.Row="2"
-                                         Grid.Column="2"
-                                         Margin="5"
-                                         Text="{Binding SelectedDeltager.DeltagerEmail}" />
-                                <Button Content="Tilføj"
-                                        Grid.Row="3"
-                                        Grid.Column="2"
-                                        Margin="5"
-                                        Command="{Binding RelayCmdUser}" />
-                            </Grid>
                         </StackPanel>
                     </PivotItem>
                     <PivotItem Header="Dimser">
-                        <!--Pivot content goes here-->
-                        <TextBlock Text="Content of section 3." />
+                        <StackPanel>
+                            <ListView ItemsSource="{Binding UserL, Mode=TwoWay}"
+                                      Height="500"
+                                      Width="500"
+                                      HorizontalAlignment="Left">
+                                <ListView.ItemTemplate>
+                                    <DataTemplate>
+                                        <StackPanel>
+                                            <Grid>
+                                                <Grid.RowDefinitions>
+                                                    <RowDefinition />
+                                                    <RowDefinition />
+                                                    <RowDefinition />
+                                                </Grid.RowDefinitions>
+                                                <StackPanel Orientation="Horizontal">
+                                                    <TextBlock Text="{Binding FirstName}"
+                                                               Margin="10,10,2,5" />
+                                                    <TextBlock Text="{Binding LastName}"
+                                                               Margin="0,10,10,5" />
+                                                </StackPanel>
+                                                <TextBlock Text="{Binding Email}"
+                                                           Margin="10,5,10,5"
+                                                           Grid.Row="1" />
+                                                <MenuFlyoutSeparator Grid.Row="2" />
+                                            </Grid>
+                                        </StackPanel>
+                                    </DataTemplate>
+                                </ListView.ItemTemplate>
+                            </ListView>
+                        </StackPanel>
                     </PivotItem>
                 </Pivot>
             </Grid>
@@ -284,6 +258,7 @@
                 <TextBlock Grid.Row="0"
                            Grid.Column="0"
                            Text="Mine Projekter"
+                           FontWeight="Bold"
                            Margin="10" />
 
                 <ListView ItemsSource="{Binding MyProjects, Mode=TwoWay}"
