--- a/DimseLab-Aflevering/MainPage.xaml
+++ b/DimseLab-Aflevering/MainPage.xaml
@@ -266,23 +266,25 @@
                     <viewModel:MyProjectsViewModel />
                 </Grid.DataContext>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="2*" />
+                    <ColumnDefinition Width="1*" />
                     <ColumnDefinition Width="1*" />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
-                    <RowDefinition />
+                    <RowDefinition Height="Auto"/>
                     <RowDefinition />
                 </Grid.RowDefinitions>
                 <TextBlock Grid.Row="0"
                            Grid.Column="0"
                            Text="Mine Projekter"
                            FontWeight="Bold"
-                           Margin="10,12,10,10" />
+                           Margin="10,15,10,10" 
+                           VerticalAlignment="Top"/>
 
                 <ListView ItemsSource="{Binding MyProjects, Mode=TwoWay}"
                           Height="500"
                           Width="500"
                           HorizontalAlignment="Left"
+                          VerticalAlignment="Top"
                           SelectedItem="{Binding SelectedProject}"
                           Grid.Row="1"
                           Grid.Column="0">
@@ -296,8 +298,8 @@
                                         <RowDefinition />
                                     </Grid.RowDefinitions>
                                     <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="300" />
-                                        <ColumnDefinition Width="200" />
+                                        <ColumnDefinition />
+                                        <ColumnDefinition />
                                     </Grid.ColumnDefinitions>
                                     <TextBlock Text="{Binding Name}"
                                                Margin="10,10,10,5"
@@ -306,7 +308,8 @@
                                     <TextBlock Text="{Binding Description}"
                                                Margin="10,5,10,5"
                                                Grid.Row="1"
-                                               Grid.Column="0" />
+                                               Grid.Column="0" 
+                                               TextWrapping="Wrap" />
                                     <MenuFlyoutSeparator Grid.Row="2"
                                                          Grid.Column="0"
                                                          Grid.ColumnSpan="2" />
@@ -316,8 +319,10 @@
                     </ListView.ItemTemplate>
                 </ListView>
                 <Grid HorizontalAlignment="Left"
-                      VerticalAlignment="Bottom"
-                      MinWidth="200">
+                      VerticalAlignment="Top"
+                      MinWidth="200"
+                      Grid.Column="1"
+                      Grid.Row="1">
                     <Grid.RowDefinitions>
                         <RowDefinition />
                         <RowDefinition />
@@ -328,7 +333,7 @@
                         <ColumnDefinition />
                         <ColumnDefinition MinWidth="200" />
                     </Grid.ColumnDefinitions>
-                    <TextBlock Text="Tilføj deltager:"
+                    <TextBlock Text="Start nyt projekt:"
                                Grid.Row="0"
                                Grid.Column="0"
                                Margin="5"
