--- a/DimseLab-Aflevering/MainPage.xaml
+++ b/DimseLab-Aflevering/MainPage.xaml
@@ -319,7 +319,7 @@
                 </ListView>
                 <Grid HorizontalAlignment="Left"
                       VerticalAlignment="Top"
-                      MinWidth="200"
+                      MinWidth="400"
                       Grid.Column="1"
                       Grid.Row="1">
                     <Grid.RowDefinitions>
@@ -327,10 +327,11 @@
                         <RowDefinition />
                         <RowDefinition />
                         <RowDefinition />
+                        <RowDefinition />
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition />
-                        <ColumnDefinition MinWidth="200" />
+                        <ColumnDefinition MinWidth="300" />
                     </Grid.ColumnDefinitions>
                     <TextBlock Text="Start nyt projekt:"
                                Grid.Row="0"
@@ -341,10 +342,12 @@
                                Grid.Row="1"
                                Grid.Column="0"
                                Margin="5" />
-                    <TextBlock Text="E-mail:"
+                    <TextBlock Text="Beskrivelse:"
                                Grid.Row="2"
                                Grid.Column="0"
-                               Margin="5" />
+                               Margin="5"
+                               Height="100"
+                               TextWrapping="Wrap"/>
                     <TextBox Grid.Row="1"
                              Grid.Column="1"
                              Margin="5"
@@ -353,9 +356,21 @@
                              Grid.Column="2"
                              Margin="5"
                              Text="{Binding SelectedDeltager.DeltagerEmail}" />
+                    <TextBlock Grid.Row="3"
+                             Grid.Column="0"
+                             Margin="5"
+                             Text="Slutdato:" />
+                    <DatePicker HorizontalAlignment="Center"
+                                Grid.Row="3"
+                                Grid.Column="1"
+                                Margin="5"
+                                VerticalAlignment="Top"
+                                DayVisible="True"
+                                Date="{Binding ProjectEndDate, Mode=TwoWay}"
+                                />
                     <Button Content="Tilføj"
-                            Grid.Row="3"
-                            Grid.Column="2"
+                            Grid.Row="4"
+                            Grid.Column="1"
                             Margin="5"
                             Command="{Binding RelayCmdUser}" />
                 </Grid>
