--- a/DimseLab-Aflevering/MainPage.xaml
+++ b/DimseLab-Aflevering/MainPage.xaml
@@ -278,30 +278,6 @@
                            FontWeight="Bold"
                            Margin="10,15,10,10"
                            VerticalAlignment="Top" />
-                <!--
-                <ItemsControl ItemsSource="{Binding MyProjects}"
-                              >
-                    <ItemsControl.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <WrapGrid Orientation="Horizontal" />
-                        </ItemsPanelTemplate>
-                    </ItemsControl.ItemsPanel>
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <Button Command="{Binding SelectedProjectCommand}">
-                            <Border BorderBrush="LightBlue"
-                                    BorderThickness="2"
-                                    CornerRadius="5"
-                                    Margin="5">
-                                
-                                <TextBlock Text="{Binding Name}" />
-                            </Border>
-                            </Button>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                </ItemsControl>
--->
-
                 <ListView ItemsSource="{Binding MyProjects, Mode=TwoWay}"
                           Height="500"
                           Width="500"
@@ -317,7 +293,10 @@
                                     <Grid.DataContext>
                                         <viewModel:MyProjectsViewModel/>
                                     </Grid.DataContext>
-                                    <Button Command="{Binding SelectedProjectCommand}" />
+                                    <Button Command="{Binding SelectedProjectCommand}"
+                                            Margin="10"
+                                            Width="500"
+                                            Height="100"/>
                                 </Grid>
                                 <Grid>
                                     <Grid.RowDefinitions>
@@ -425,14 +404,17 @@
         <!--#region AdminGrid-->
         <Grid Grid.Row="1"
               Visibility="{Binding  ViewVisibility[3].Visible}">
-            <Grid Grid.Row="1">
+            <Grid Grid.Row="1"
+                  BorderBrush="BlueViolet"
+                  BorderThickness="5">
                 <Grid.DataContext>
-                    <viewModel:BrowseViewModel />
+                    <viewModel:AdminViewModel />
                 </Grid.DataContext>
-                <TextBox BorderThickness="5"
-                         BorderBrush="BlueViolet">
+                <Button Content="Save"
+                        Command="{Binding SaveButton}"/>
+                <Button Content="Load"
+                        Command="{Binding LoadButton}"/>
 
-                </TextBox>
             </Grid>
         </Grid>
         <!--#endregion-->
