--- a/DimseLab-Aflevering/MainPage.xaml
+++ b/DimseLab-Aflevering/MainPage.xaml
@@ -317,6 +317,7 @@
                                       HorizontalAlignment="Center"
                                       VerticalAlignment="Top">
                                     <Button Command="{Binding ElementName=MainPages, Path=DataContext.SelectedProjectCommand}"
+                                            CommandParameter="{Binding ID}"
                                             Margin="10"
                                             Width="30"
                                             Height="30"
